<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KitchenTimer</string>
    <string name="timer">00:00:00</string>
    <string name="action_settings">Settings</string>
    <string name="tenmin">10分</string>
    <string name="onemin">1分</string>
    <string name="tensec">10秒</string>
    <string name="onesec">1秒</string>
    <string name="start">START</string>
    <string name="clear">CLEAR</string>
    <string name="stop">STOP</string>
    <string name="pickup_sound">通知音選択</string>
    <string name="sound">通知音</string>
    <string name="volume">音量</string>
    <string name="span">再生時間</string>

</resources>